the basis of oracle

--- a/5. query.md
+++ b/5. query.md
@@ -1,7 +1,7 @@
 ### 查询语句
 1. 基本语句查询
 `SELECT［DISTINCT］ column_name1,...|* FROM table_name [WHERE conditions];`
-2. 在sql plus 中设置格式(COLUMN 可简写成COL)
+2. 在sql plus 中设置格式(COLUMN 可简写成 COL)
 	* `COLUMN column_name HEADING new_name;`
 	* `COLUMN column_name FORMAT dataformat;`
 		* 字符型（a10:表示只显示10位字符）
@@ -15,12 +15,12 @@
 	1. 通配符的使用（_, %）
 		* 一个_只能代表一个字符
 		* %可以代表0到多个任意字符
-	2. 使用 LIKE 查询
+	2. 使用 `LIKE` 查询
 8. 范围查询
 	* `BETWEEN...AND`
 	* `IN/NOT IN`
 9. 对查询结果排序
-	* `SELECT ... FROM ... [WHERE] ORDER BY column1 DEAC/ASC, ...`
+	* `SELECT ... FROM ... [WHERE] ORDER BY column1 DEAC/ASC, ...;`
 10. case...when 语句的使用
 	* `CASE column_name WHEN value1 THEN result1,... [ELSE result] END;`
 	* `CASE WHEN column_name=value1 THEN result1,...[ELSE result] END;`
