--- a/4. constraint.md
+++ b/4. constraint.md
@@ -4,35 +4,16 @@
 2. 确保完整性（数据精确性和可靠性）
 
 #### 非空约束
-1. 在创建表时设置非空约束
-```
-CREATE TABLE table_name
-(
-column_name datatype NOT NULL, ...
-);
-```
+1. 在创建表时设置非空约束：`CREATE TABLE table_name
+(column_name datatype NOT NULL, ...);`
 2. 在修改表时添加非空约束：`ALTER TABLE table_name MODIFY column_name datatype NOT NULL;`
 3. 在修改表时去除非空约束：`ALTER TABLE table_name MODIFY column_name datatype NULL;`
 
 #### 主键约束
 1. 作用：确保表当中每一行数据的唯一性（非空，唯一，一张表只能设计一个主键约束，主键约束可以由多个字段构成（联合主键或复合主键））
 2. 在创建表时设置主键约束
-	1.  
-```
-CREATE TABLE table_name
-(
-column_name datatype PRIMARY KEY, ...
-);
-```
-	2. 
-```
-CREATE TABLE table_name
-(
-column_name datatype, ...
-CONSTRAINT constraint_name PRIMARY KEY(column_name1,...)
-);
-```
-	3. 可在 user_constraints 数据字典查约束
+	1. `CREATE TABLE table_name(column_name datatype PRIMARY KEY, ...);`
+	2. `CREATE TABLE table_name(column_name datatype, ... CONSTRAINT constraint_name PRIMARY KEY(column_name1,...));`（可在 user_constraints 数据字典查约束）
 3. 在修改表时添加主键约束：`ALTER TABLE table_name ADD CONSTRAINT constraint_name PRIMARY KEY(column_name1,...);`
 4. 更改约束的名称：`ALTER TABLE table_name RENAME CONSTRAINT old_name TO new_name;`
 5. 删除主键约束：
@@ -42,23 +23,10 @@ CONSTRAINT constraint_name PRIMARY KEY(column_name1,...)
 
 #### 外键约束
 1. 在创建表时设置外键约束
-	1.  
-```
-CREATE TABLE table1
-(
-column_name datatype REFERENCES table2(column_name),...
-);
-```
-**注：table2是主表，table1是从表，设置外键约束时，主表的字段必须是主键，主从表中相应的字段必须是同一个数据类型，从表中外键字段的值必须来自主表中的相应字段的值，或者为null值**
-	2. 
-```
-CREATE TABLE table_name
-(
-column_name datatype, ...
-CONSTRAINT constraint_name FOREIGN KEY(column_name) REFERENCES table_name(column_name) [ON DELETE CASCADE]
-);
-```
-**ON DELETE CASCADE 的作用：主表中删除数据时，从表相应数据也被删除**
+	1.  `CREATE TABLE table1(column_name datatype REFERENCES table2(column_name),...);`
+	**注：table2是主表，table1是从表，设置外键约束时，主表的字段必须是主键，主从表中相应的字段必须是同一个数据类型，从表中外键字段的值必须来自主表中的相应字段的值，或者为null值**
+	2. `CREATE TABLE table_name(column_name datatype, ... CONSTRAINT constraint_name FOREIGN KEY (column_name) REFERENCES table_name(column_name) [ON DELETE CASCADE]);`
+	**注：ON DELETE CASCADE 的作用：主表中删除数据时，从表相应数据也被删除**
 2. 在修改表时添加外键约束：`ALTER TABLE table_name ADD CONSTRAINT constraint_name FOREIGN KEY(column_name) REFERENCES table_name(column_name) [ON DELETE CASCADE];`
 3. 删除外键约束
 	* `ALTER TABLE table_name DISABLE|ENABLE CONSTRAINT constraint_name;`(禁用/启用，可在 user_constraints 数据字典 status 查状态)
@@ -72,22 +40,9 @@ CONSTRAINT constraint_name FOREIGN KEY(column_name) REFERENCES table_name(column
 	* 主键在每张表中只能有一个
 	* 唯一约束在每张表中可以有多个
 3. 在创建表时设置唯一约束
-	1.  
-```
-CREATE TABLE table_name
-(
-column_name datatype UNIQUE,...
-);
-```
-**注：table2是主表，table1是从表，设置外键约束时，主表的字段必须是主键，主从表中相应的字段必须是同一个数据类型，从表中外键字段的值必须来自主表中的相应字段的值，或者为null值**
-	2. 
-```
-CREATE TABLE table_name
-(
-column_name datatype, ...
-CONSTRAINT constraint_name UNIQUE(column_name)
-);
-```
+	1. `CREATE TABLE table_name(column_name datatype UNIQUE,...);`
+	**注：table2是主表，table1是从表，设置外键约束时，主表的字段必须是主键，主从表中相应的字段必须是同一个数据类型，从表中外键字段的值必须来自主表中的相应字段的值，或者为null值**
+	2. `CREATE TABLE table_name(column_name datatype, ... CONSTRAINT constraint_name UNIQUE(column_name));`
 2. 在修改表时添加唯一约束：`ALTER TABLE table_name ADD CONSTRAINT constraint_name UNIQUE(column_name);`
 3. 删除唯一约束
 	* `ALTER TABLE table_name DISABLE|ENABLE CONSTRAINT constraint_name;`(禁用/启用，可在 user_constraints 数据字典 status 查状态)
@@ -96,21 +51,8 @@ CONSTRAINT constraint_name UNIQUE(column_name)
 #### 检查约束
 1. 作用：表中的值更具有实际意义
 2. 在创建表时设置检查约束
-	1.  
-```
-CREATE TABLE table_name
-(
-column_name datatype CHECK(expressions), ...
-);
-```
-	2. 
-```
-CREATE TABLE table_name
-(
-column_name datatype, ...
-CONSTRAINT constraint_name CHECK(expressions)
-);
-```
+	1. `CREATE TABLE table_name(column_name datatype CHECK(expressions), ...);`
+	2. `CREATE TABLE table_name(column_name datatype, ... CONSTRAINT constraint_name CHECK(expressions));`
 3. 在修改表时添加检查约束：`ALTER TABLE table_name ADD CONSTRAINT constraint_name CHECK(expressions);`
 4. 删除检查约束
 	* `ALTER TABLE table_name DISABLE|ENABLE CONSTRAINT constraint_name;`(禁用/启用，可在 user_constraints 数据字典 status 查状态)
