the  basis of oracle

--- a/6. function.md
+++ b/6. function.md
@@ -8,19 +8,25 @@
 		* 取整函数：CEIL(n)向上取整，FLOOR(n)向下取整（例：`select ceil(23.45),floor(23.45) from dual;`）
 		* 绝对值函数：ABS(n)
 		* 取余数函数：MOD(m,n),m 代表被除数，n 代表除数，即m%n的值，如果两个中有一个为null，结果为null
-		* 幂函数：POWER(m,n): m 的 n 次幂
-		* SQRT(n):n 的平方根
-		* 三角函数：SIN(n)、ASIN(n)、COS(n)、ACOS(n)、TAN(n)、ATAN(n):n 是弧度值
+		* 幂函数：POWER(m,n), m 的 n 次幂
+		* 取平方根函数：SQRT(n), n 的平方根
+		* 三角函数：SIN(n)、ASIN(n)、COS(n)、ACOS(n)、TAN(n)、ATAN(n), n 是弧度值
 
 	2. 字符函数
-		* 大小写转换函数：UPPER(char)：小写转大写, LOWER(char)：大写转小写,INITCAP(char):首字符：首字母转大写
-		* 获取子字符串函数：SUBSTR(char,[m[,n]]),m 是取子串的开始位置，从1开始；n 是截取子串的位数，当 n 省略时表示从 m 的位置截取到字符串末尾，m 为0表示从字符串的字母开始首截取，m 为负数表示从字符串的尾部开始截取
+		* 大小写转换函数：
+			 * UPPER(char)：小写转大写
+			 * LOWER(char)：大写转小写
+			 * INITCAP(char)：首字母转大写
+		* 获取子字符串函数：SUBSTR(char,[m[,n]])
+			 * m 是取子串的开始位置，从1开始
+			 * n 是截取子串的位数，当 n 省略时表示从 m 的位置截取到字符串末尾
+			 * m 为0表示从字符串的字母开始首截取，m 为负数表示从字符串的尾部开始截取
 		* 获取字符串长度函数：LENGTH(char)
 		* 字符串连接函数：CONCAT(char1, char2),与||操作符的作用一样，即 char1||char2
 		* 去除子串函数：
-			* TRIM(c2 FROM c1),从字符串 c1 中去除**字符** c2，c2 省略是去除首尾空格；
-			* LTRIM(c1[,c2]),只去除头部开始的连续出现的 c2 字符，c2 省略是去除首部空格；
-			* RTRIM(c1[,c2]),只去除尾部开始的连续出现的 c2 字符，c2 省略是去除尾部空格；
+			* TRIM(c2 FROM c1),从字符串 c1 中去除**字符** c2，c2 省略是去除首尾空格
+			* LTRIM(c1[,c2]),只去除头部开始的连续出现的 c2 字符，c2 省略是去除首部空格
+			* RTRIM(c1[,c2]),只去除尾部开始的连续出现的 c2 字符，c2 省略是去除尾部空格
 		* 替换函数：REPLACE(char,s_string[,r_string]),省略 r_string 用空格替换
 
 	3. 日期函数
